# coursemap

./: .env.example  .gitignore  CHANGELOG.md  DATA_QUALITY.md  DATA_REFRESH_GUIDE.md  Dockerfile  README.md  SETUP_GUIDE.md  START.bat  START.sh  STUDENT_GUIDE.md  docker-compose.yaml  fly.toml  plan.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  data-refresh.yml  refresh-datasets.yml
coursemap/api/: plan_store.py  server.py  ui.html
coursemap/cli/: main.py
coursemap/domain/: course.py  fees.py  plan.py  prerequisite.py  prerequisite_utils.py  requirement_nodes.py  requirement_serialization.py  requirement_utils.py
coursemap/export/: ical.py
coursemap/ingestion/: dataset_loader.py  minor_loader.py  patch_elective_gaps.py  repair_dataset.py
coursemap/optimisation/: scorer.py  search.py
coursemap/planner/: elective_filler.py  generator.py
coursemap/rules/: degree_rules.py
coursemap/services/: degree_info_service.py  plan_export_service.py  planner_service.py
coursemap/validation/: dataset_validator.py  engine.py
datasets/: courses.json  majors.json  minors.json
scripts/: refresh_data.ps1  refresh_data.sh  run_all_data_refresh.py  scrape_minors.py  test_prereq_scraper.py
tests/: test_api.py  test_generator.py  test_integration.py  test_units.py  test_v04_improvements.py  test_v1_fixes.py  test_v2_features.py  test_v7_fixes.py
