[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coursemap"
version = "2.0.0"
description = "Degree planner for Massey University"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bonnie McConnell", email = "bonniep.mcconnell@gmail.com" }]
dependencies = []

[project.optional-dependencies]
# Dataset refresh / scraping tools (not needed to run the planner)
ingestion = [
    "beautifulsoup4",
    "requests",
]
# REST API + web UI server
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ics>=0.7",
    "slowapi>=0.1.9",
]
# Development / test dependencies
dev = [
    "pytest>=7",
    "pytest-cov",
    "httpx>=0.27",   # needed by FastAPI TestClient
]
# Install everything
all = [
    "beautifulsoup4",
    "requests",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ics>=0.7",
    "slowapi>=0.1.9",
    "httpx>=0.27",
]

[project.scripts]
coursemap = "coursemap.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coursemap*"]

[tool.setuptools.package-data]
"*" = ["datasets/*.json", "api/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
